fix footer overlapping

--- a/src/main/webapp/assets/css/footer.css
+++ b/src/main/webapp/assets/css/footer.css
@@ -5,6 +5,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    padding: 5px;
 }
 
 .center {
